# tf-sports

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  keystore.properties.example  tailwind.config.js  tailwind.css  todo.md
.github/workflows/: android-release.yml
assets/: robots.txt  tailwind.css
data/: agenda-de-eventos-deportivos-en-tenerife.json  espacios-deportivos.json  instalaciones-deportivas.geojson
docs/: 404.html
docs/assets/: tailwind-dxh2fcd4d944771afbe.css  tailwind-dxh6558d38b5d1dc4.css  tailwind-dxh6f7a40521074735.css  tailwind-dxh832513269ef3df59.css  tailwind-dxh8d4e33484821fa64.css  tailwind-dxh922fc2cc5c70eb74.css
docs/wasm/: tf-sports.js
scripts/: all-build.sh  android-build.sh  android-proguard-rules.pro  build-pages.sh  post-dx-patch.sh  sync-version-to-readme.sh
src/: data.rs  main.rs  models.rs  styles.rs  theme.rs
src/components/: breadcrumb.rs  calendar.rs  category_card.rs  empty_state.rs  event_card.rs  event_card_with_image.rs  filter_section.rs  meta_tags.rs  mod.rs  page_header.rs  paginated_listing.rs  pagination.rs
src/components/ui/: badge.rs  base_layout.rs  button.rs  card.rs  container.rs  footer.rs  map.rs  meta_card.rs  mod.rs  search_bar.rs  section.rs  select.rs  separator.rs
src/utils/: date_utils.rs  listing_helpers.rs  mod.rs  pagination_filters.rs
src/views/: details.rs  event.rs  events.rs  home.rs  mod.rs  navbar.rs  place.rs  places.rs  sport.rs  sports.rs
