[package]
name = "tf-sports"
version = "1.0.3"
authors = ["Tomás Pino <tomas.pino.perez03@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-free-icons = { version = "0.10", features = ["feather"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlElement", "DomTokenList", "Storage"], optional = true }
js-sys = { version = "0.3", optional = true }
anyhow = "1.0.101"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web", "web-sys", "js-sys", "console_error_panic_hook"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
